# FlowMap_OSPRay_Viewer

./: .gitignore  CMakeLists.txt  README.md  data_loader.h  load_vtk.cpp  load_vtk.h  loader.cpp  main.cpp  main_2D.cpp  main_3D.cpp  volume_data.h
onnxruntim-inference/: CMakeLists.txt  main.cpp  main_2D.cpp
onnxruntim-inference/utils/: CMakeLists.txt  place_seeds.cpp  place_seeds.h  sobol.cpp  writer.cpp  writer.h
util/: CMakeLists.txt  bc_tet.cpp  bc_tet.h  transfer_function_widget.cpp
utils/: sobol.cpp
